--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
           </p>
         </div>
       </div>
-
+      
       <div id="chatWindow" style="width: 100%; height: 100%;">
         <div class="wrapper" id="hideSegment">
           <div class="row">
             <div class="col-lg-12">
               <div id="topChatBar" style="display: block;">
-                <div id="agentIsTyping"></div>
+                <div id="agentIsTyping" style="float: left;"></div>
                 <form onsubmit="return false">
                   <div>
                     <button
