before new version

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=100" />
     <title>Liveperson Chat Demo</title>
     <link rel="stylesheet" href="./scripts/json-pollock/json-pollock.min.css" />
+    <script lang="javascript">
+      var jwt = { "jwt": "empty" };
+
+    var jwtCallback = function(input) {
+      console.log(input);
+      return input;
+    }
+    </script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <link
