--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
   <script
     type="text/javascript"
-    src="scripts/liveperson/message-window.min.js"
+    src="scripts/liveperson/message-window.js"
   ></script>
   <script type="text/javascript" src="scripts/app/app_script.js?n=1"></script>
 </html>
